syntax = "proto3";

message Heartbeat {
}

message Connect {
    string name = 2;
    uint64 peerId = 3;
    string ctx = 4;
}

message Hello {
    string name = 1;
    string uuid = 2;
    int64 colorId = 3;
    int64 protocolVersion = 4;
}

message Query {
    Hello hello = 1;
    Event event = 2;
}

message Welcome {
    message Options {
        uint64 seed = 1;
        uint32 map = 2;
        uint32 players = 3;
        uint32 firstPlayer = 4;
        uint64 matchId = 7;
        uint32 rulesVersion = 8;
    }

    Options options = 3;
    bool resuming = 5;
    int64 protocolVersion = 6;
}

message GameStarted {
}

message ConnectedPlayers {
    message Player {
        string uuid = 1;
        string name = 2;
        int64 seat = 5;
    }

    repeated Player players = 1;
    uint32 totalSeats = 3;
}

message Response {
    Welcome welcome = 1;
    GameStarted gameStarted = 2;
    ConnectedPlayers connectedPlayers = 3;
    Event event = 5;
}

message Event {
    message Inner {
        uint32 idx = 1;
        uint32 player = 2;
        Move move = 4;
    }

    Inner i = 1;
}

message Move {
    enum Kind {
        ERROR = 0;
        ROUTE = 1;
        STATION = 2;
        TICKETS = 3;
        PICK_OPEN = 4;
        PICK_DECK = 5;
        RETURN_TICKETS = 7;
        CHOOSE_FIRST_TICKETS = 15;
    }
    Kind kind = 1;
    uint32 player = 2;
    uint32 route = 3;
    uint32 city = 4;
    repeated uint32 card = 5;
    uint32 slot = 6;
    repeated uint32 ticket = 8;
}
